2000-07-16  Christian Krone  <krischan@sql.de>

	* src/jacl/tcl/lang/ClockCmd.java: Upgrade
	Jacl's clock command to match Tcl 8.3.
	Even stardates are supported!
	* tests/tcl/clock.test: Upgrade to Tcl 8.3.

2000-07-13  Mo DeJong  <mdejong@redhat.com>

	* tcljava.m4: Add doublequotes around
	test variables that might be empty.

2000-07-13  Mo DeJong  <mdejong@redhat.com>

	* src/empty/empty.jar: Regen.
	* src/empty/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/tclblend/tcl/lang/Interp.java: Add conflict table variable.
	* src/tcljava/tcl/lang/ReflectObject.java: Overhaul reflect table
	implementation to avoid problem with object hash overlap in JDK
	1.2. We now use a second conflict table to store hash conflicts.

2000-06-15  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h:
	* src/native/javaCmd.c:
	* src/native/javaIdle.c:
	* src/native/javaInterp.c:
	* src/native/javaList.c:
	* src/native/javaNotifier.c:
	* src/native/javaObj.c:
	* src/native/javaTimer.c:
	* src/native/javaUtil.c:
	Rename JAVA_LOCK/JAVA_UNLOCK to
	PUSH_JAVA_ENV/POP_JAVA_ENV, create
	new JAVA_LOCK and JAVA_UNLOCK macros
	that just grab the monitor, use these
	new JAVA_LOCK/JAVA_UNLOCK macros in
	the rest of the code.

2000-06-03  Mo DeJong  <mdejong@redhat.com>

	* demos/pyramidpkg/AppletConsole.java:
	* demos/pyramidpkg/ConsoleKeyListener.java:
	* demos/pyramidpkg/Pyramid.java:
	Overhauled the pyramid demo so that it uses
	the Tcl event queue in a thread safe way.

2000-06-03  Mo DeJong  <mdejong@redhat.com>

	* new_features.txt: Added notes about
	new JVM support. Minor comment fixup.
	* src/native/java.h: Removed old code
	that supported Tcl 8.0.
	* src/jacl/tcl/lang/Interp.java (appendElement):
	Removed extra call to toString() on result.

2000-06-03  Mo DeJong  <mdejong@redhat.com>

	* Makefile.in: Merged from unix/Makefile.in
	* aclocal.m4:
	* autogen.sh: Added
	* configure: Added
	* configure.in: Merged from unix/configure.in
	* jaclsh.in: Added
	* jtclsh.in: Added